--- a/css/resume.css
+++ b/css/resume.css
@@ -24,10 +24,14 @@ img {
     width: 50% ;
     max-width: 900px;
     min-width: 320px;
-    background-color: white;
+    background-color:white;
 }
 
-
+header{
+   
+    margin-bottom: 20px;
+  
+}
 
 header div{
     display: inline-block;
@@ -41,14 +45,20 @@ h1{
 
 h3 {
     margin-bottom: 3px;
+    color: steelblue;
 }
-h4, h2{
+
+
+h4{
     margin-top: 0px;
     margin-bottom: 0px;
+    color: slategray;
+    
 }
 h5{
     margin-top: 0%;
-    margin-bottom: 9px;
+    margin-bottom: 6px;
+    color: slateblue;
 }
 article {
     margin-top: 0px;
@@ -57,4 +67,29 @@ article {
 p{
     margin-top: 6px;
     margin-bottom: 6px ;
+    font-size: 16px;
+}
+
+#name{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: slateblue;
+}
+
+#activity{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:slategray;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#technologies{
+
+    font-size: 15px;
+    margin-left: 30px;
+    margin-top: 0px;
+    
+}
+
+span{
+
 }
